<resources>
    <string name="app_name">Goofy Chat</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="welcome_to_goofy_chat">Welcome To Goofy Chat</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login_to_your_string_create_account">Login to your @string/create_account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_status">Your Status</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="hi_there_i_am_using_goofy_chat_app">Hi There I Am Using Goofy Chat App</string>
    <string name="display_names">Display Name</string>
</resources>
